--- a/circle.yml
+++ b/circle.yml
@@ -2,14 +2,14 @@ machine:
         php:
                 version: 5.4.10
                 
-                ## Customize dependencies
-                #dependencies:
-                #  override:
-                #      - mkdir -p build/logs
-                #          - composer install --dev --no-interaction
-                #              - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
-                #
-                #              ## Customize test commands
-                #              test:
-                #                override:
-                #                    - phpunit -c phpunit.xml.dist
+        ## Customize dependencies
+        dependencies:
+                override:
+                - mkdir -p build/logs
+                - composer install --dev --no-interaction
+                - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+
+        ## Customize test commands
+        test:
+                override:
+                - phpunit -c phpunit.xml.dist
