--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,24 @@
 machine:
+        timezone: Asia/Tokyo
         php:
                 version: 5.4.10
                 
         ## Customize dependencies
-        dependencies:
-                override:
-                - mkdir -p build/logs
-                - composer install --dev --no-interaction
-                - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
+dependencies:
+        override:
+        - mkdir -p build/logs
+        - composer install --dev --no-interaction
+        - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
 
         ## Customize test commands
-        test:
-                override:
-                - phpunit -c phpunit.xml.dist
+test:
+        override:
+        - phpunit -c phpunit.xml.dist
+
+        ## Customize deployment
+deployment:
+        deploy:
+                branch: master
+                commands:
+                        - make build
+                        - make deploy
